<resources>
    <string name="app_name">Batabit</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="password">Password</string>
    <string name="remember_me" translatable="false">Remember Me</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_account_login">Already Have Account, LOGIN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">submit</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="text_for_test">يشارك المتسابق القطري الشيخ / محمد بن فهد آل ثاني احد اعضاء نادي قطر للدراجات النارية (بطابط) في سباق baja aragon 21-22 july 2024 يعتبر بطولة من بطولات العالم للباها بمسافة مايقارب 800 كيلو على مرحلتين وستكون اول مشاركة اوروبية للمتسابق ونتمنى له كل التوفيق إن شاء الله</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>