<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.LoginActivity">

    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:background="@color/onabi"
        android:layout_height="@dimen/_120sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_9sdp"
        android:layout_marginEnd="@dimen/_9sdp"
        android:layout_height="wrap_content">



        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_40sdp"
            app:srcCompat="@drawable/b_icon"
            android:layout_height="@dimen/_40sdp"/>



        <TextView
            android:layout_width="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:fontFamily="@font/noto_kufi_arabic"
            android:gravity="center"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:textSize="@dimen/_17ssp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_25sdp"
            app:srcCompat="@drawable/baseline_arrow_forward_24"
            app:tint="@color/white"
            android:layout_gravity="center_vertical"
            android:layout_height="@dimen/_25sdp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="@dimen/_75sdp"
        android:layout_marginStart="@dimen/_9sdp"
        android:orientation="vertical"
        android:paddingStart="@dimen/_5sdp"
        android:gravity="center"
        android:paddingEnd="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_9sdp"
        android:layout_marginBottom="@dimen/_9sdp"
        android:background="@drawable/card_layout"
        android:elevation="@dimen/_4sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/registration"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/noto_kufi_arabic"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/full_name"
            android:maxLines="1"
            android:textSize="@dimen/_13ssp"
            android:gravity="start"
            android:fontFamily="@font/noto_kufi_arabic"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_person_24"
            android:drawableTint="#2C000000"
            android:drawablePadding="@dimen/_2sdp"/>

        <EditText
            android:hint="@string/email"
            android:maxLines="1"
            android:textSize="@dimen/_13ssp"
            android:gravity="start"
            android:fontFamily="@font/noto_kufi_arabic"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawableTint="#2C000000"
            android:drawablePadding="@dimen/_2sdp"/>

        <EditText
            android:hint="@string/password"
            android:fontFamily="@font/noto_kufi_arabic"
            android:textColor="@color/colorPrimary"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawableTint="#2C000000"
            android:textSize="@dimen/_13ssp"
            android:maxLines="1"
            android:maxLength="12"
            android:drawablePadding="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/confirm_password"
            android:fontFamily="@font/noto_kufi_arabic"
            android:textColor="@color/colorPrimary"
            android:drawableTint="#2C000000"
            android:maxLines="1"
            android:maxLength="12"
            android:textSize="@dimen/_13ssp"
            android:drawablePadding="@dimen/_2sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:text="@string/submit"
            android:fontFamily="@font/noto_kufi_arabic"
            android:background="@drawable/btn_layout"
            android:layout_marginTop="@dimen/_12sdp"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:elevation="@dimen/_5sdp"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_30sdp"
                app:srcCompat="@drawable/google_icon"
                android:layout_height="@dimen/_30sdp"/>


            <TextView
                android:text="@string/sign_in_with_google"
                android:textColor="@android:color/holo_blue_light"
                android:textStyle="bold"
                android:fontFamily="@font/noto_kufi_arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:text="@string/already_have_account_login"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/noto_kufi_arabic"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>